--- a/css/css.css
+++ b/css/css.css
@@ -66,16 +66,20 @@ body {
   }
   .bmw-info {
     margin: 0;
-    width: auto;
-    height: auto;
     position: relative;
     left: 550px;
     bottom: 350px;
+    background-color: #c0ccff;
+    display: inline-flex;
+    padding: 10px;
+    font-size: 19px;
   }
   
   .bmw {
     width: 13cm;
     height: 9cm;
+    position: relative;
+    top: 10px;
     margin: 20px;
     padding: 10px;
   }
@@ -90,7 +94,23 @@ body {
   width: 50%;
   height: 20%;
   position: relative;
-  left: 530px;
-  bottom: 220px;
-  padding: 15px;
+  left: 540px;
+  bottom: 250px;
+  padding: 20px;
+}
+.xuv-title{
+   position: relative;
+   left: 10px;
+   bottom: 600px;
+}
+.xuv-info{
+  margin: 0;
+  position: relative;
+  text-justify:distribute;
+  left: 10px;
+  bottom: 580px;
+  background-color: #c0ccff;
+  display: inline-flex;
+  padding: 8px;
+  font-size: 18px;
 }
