--- a/css/css.css
+++ b/css/css.css
@@ -1,116 +1,182 @@
 body {
-    margin: 0;
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
-  .header {
-    background-color: #7286D3;
-    width: auto;
-    height: auto;
-    position: relative;
-    overflow: hidden;
-    backdrop-filter: blur(10px);
-    font-family: 'Kalam', cursive;
-    font-size: 20px;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .active {
-    float: left;
-    color: #f2f2f2;
-    position: relative;
-    left: 40%;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  .news {
-    float: left;
-    color: #f2f2f2;
-    position: relative;
-    left: 40%;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  .about {
-    float: left;
-    margin-left: 30%;
-    color: #f2f2f2;
-    position: relative;
-    left: 10%;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Change the color of links on hover */
-  .header a:hover {
-    background-color: #abbbf9;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .header a.active {
-    background-color: #c0ccff;
-    color: white;
-  }
-  .box {
-    position: relative;
-    left: 90px;
-    right: 20px;
-    width: 1150px;;
-    height:auto;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
-    padding: 40px;
-    padding-top: 0;
-    margin: 50px;
-    margin-top: 20px;
-  }
-  .bmw-info {
-    margin: 0;
-    position: relative;
-    left: 550px;
-    bottom: 350px;
-    background-color: #c0ccff;
-    display: inline-flex;
-    padding: 10px;
-    font-size: 19px;
-  }
-  
-  .bmw {
-    width: 13cm;
-    height: 9cm;
-    position: relative;
-    top: 10px;
-    margin: 20px;
-    padding: 10px;
-  }
-  h1 {
-    font-family: 'Playfair Display', serif;
-    margin: 0;
-    position: relative;
-    left: 550px;
-    bottom: 350px;
-  }
-.xuv{
-  width: 50%;
-  height: 20%;
+  margin: 0;
+  position: static;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+.header {
+  background-color: #7286D3;
+  width: auto;
+  height: auto;
   position: relative;
-  left: 540px;
-  bottom: 250px;
-  padding: 20px;
+  overflow: hidden;
+  backdrop-filter: blur(10px);
+  font-family: 'Kalam', cursive;
+  font-size: 20px;
 }
-.xuv-title{
-   position: relative;
-   left: 10px;
-   bottom: 600px;
+
+/* Style the links inside the navigation bar */
+.active {
+  float: left;
+  color: #f2f2f2;
+  position: relative;
+  left: 40%;
+  padding: 14px 16px;
+  text-decoration: none;
 }
-.xuv-info{
+.news {
+  float: left;
+  color: #f2f2f2;
+  position: relative;
+  left: 40%;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.about {
+  float: left;
+  margin-left: 30%;
+  color: #f2f2f2;
+  position: relative;
+  left: 10%;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the color of links on hover */
+.header a:hover {
+  background-color: #abbbf9;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.header a.active {
+  background-color: #c0ccff;
+  color: white;
+}
+.box {
+  position: relative;
+  left: 90px;
+  right: 20px;
+  width: 1150px;
+  height: auto;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  padding: 40px;
+  padding-top: 0;
+  margin: 50px;
+  margin-top: 20px;
+}
+.bmw-info {
   margin: 0;
   position: relative;
-  text-justify:distribute;
-  left: 10px;
-  bottom: 580px;
+  left: 520px;
+  bottom: 280px;
   background-color: #c0ccff;
   display: inline-flex;
-  padding: 8px;
+  padding: 10px;
+  font-size: 19px;
+}
+.bmw {
+  width: 460px;
+  height: 300px;
+  display: inline-block;
+  position: relative;
+  top: 10px;
+  margin: 20px;
+  padding: 10px;
+}
+h1 {
+  font-family: 'Playfair Display', serif;
+  margin: 0;
+  position: relative;
+  display: inline-block;
+  left: 10px;
+  bottom: 290px;
+}
+.xuv {
+  width: 50%;
+  height: 20%;
+  display: inline-block;
+  position: relative;
+  left: 540px;
+  bottom: 200px;
+  padding: 20px;
+}
+.xuv-title {
+  display: inline-block;
+  width: 1000px;
+  position: relative;
+  right: 1000px;
+  bottom: 550px;
+}
+.xuv-info {
+  display: inline-block;
+  margin: 0;
+  position: relative;
+  bottom: 700px;
+  text-justify: distribute;
+  background-color: #c0ccff;
+  display: inline-flex;
+  padding: 10px;
   font-size: 18px;
+}
+.vid{
+  display:inline-block;
+  width: 10cm;
+  height: 5cm;
+  position: relative;
+  right: 550px;
+  bottom: 200px;
+  background-color: red;
+  padding: 5px;
+}
+.vid2{
+  display:inline-block;
+  width: 10cm;
+  height: 5cm;
+  position: relative;
+  left: 385px;
+  bottom: 580px;
+  background-color: red;
+  padding: 5px;
+}
+.vid3{
+  display:inline-block;
+  width: 10cm;
+  height: 5cm;
+  position: relative;
+  left: 385px;
+  bottom: 580px;
+  background-color: red;
+  padding: 5px;
+}
+.footer{
+  background-color: #4B56D2;
+  height: 200px;
+  width: 100%;
+}
+.links{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  position: relative;
+  left: 20px;
+}
+.autocar,.car-bike{
+  font-weight: lighter;
+  color: aliceblue;
+  position: relative;
+  left: 20px;
+}
+.car-bike:hover{
+  display: inline-block;
+  background-color: #abbbf9;
+}
+.autocar:hover{
+  display: inline-block;
+  background-color: #abbbf9;
+}
+.use{
+  margin: 0;
+  color: gainsboro;
+  font-size: 30px;
+  padding-top: 10px;
 }
