--- a/css/css.css
+++ b/css/css.css
@@ -1,13 +1,13 @@
 body {
   margin: 0;
-  position: static;
+  position: relative;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 .header {
   background-color: #7286D3;
   width: auto;
-  height: auto;
+  height: 50px;
   position: relative;
   overflow: hidden;
   backdrop-filter: blur(10px);
@@ -58,7 +58,7 @@ body {
   left: 90px;
   right: 20px;
   width: 1150px;
-  height: auto;
+  height: 1000px;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
   padding: 40px;
   padding-top: 0;
@@ -68,64 +68,67 @@ body {
 .bmw-info {
   margin: 0;
   position: relative;
-  left: 520px;
-  bottom: 280px;
+  left: 410px;
+  bottom: 410px;
   background-color: #c0ccff;
   display: inline-flex;
   padding: 10px;
-  font-size: 19px;
-}
-.bmw {
-  width: 460px;
-  height: 300px;
-  display: inline-block;
-  position: relative;
-  top: 10px;
-  margin: 20px;
-  padding: 10px;
+  font-size: 16px;
 }
 h1 {
   font-family: 'Playfair Display', serif;
   margin: 0;
   position: relative;
   display: inline-block;
-  left: 10px;
-  bottom: 290px;
+  left: 36px;
+  bottom: 200px;
 }
-.xuv {
-  width: 50%;
-  height: 20%;
+.bmw {
+  width: 300px;
+  height: 200px;
   display: inline-block;
   position: relative;
-  left: 540px;
-  bottom: 200px;
+  top: 10px;
+  left: 30px ;
+  margin: 20px;
+  padding: 10px;
+}
+.xuv {
+  width: 400px;
+  height: 200px;
+  display: inline-block;
+  position: relative;
+  left: 80px;
+  bottom: 0px;
   padding: 20px;
+  margin-top: 10px;
 }
 .xuv-title {
   display: inline-block;
   width: 1000px;
   position: relative;
   right: 1000px;
-  bottom: 550px;
+  bottom: 380px;
 }
 .xuv-info {
   display: inline-block;
   margin: 0;
   position: relative;
-  bottom: 700px;
+  bottom: 550px;
+  left: 30px;
   text-justify: distribute;
   background-color: #c0ccff;
   display: inline-flex;
   padding: 10px;
-  font-size: 18px;
+  font-size: 16px;
 }
 .vid{
-  display:inline-block;
+  display:inline;
   width: 10cm;
   height: 5cm;
   position: relative;
-  right: 550px;
-  bottom: 200px;
+  right: 500px;
+  bottom: 120px;
   background-color: red;
   padding: 5px;
 }
@@ -134,8 +137,8 @@ h1 {
   width: 10cm;
   height: 5cm;
   position: relative;
-  left: 385px;
-  bottom: 580px;
+  left: 380px;
+  bottom: 480px;
   background-color: red;
   padding: 5px;
 }
@@ -145,38 +148,86 @@ h1 {
   height: 5cm;
   position: relative;
   left: 385px;
-  bottom: 580px;
+  bottom: 480px;
   background-color: red;
   padding: 5px;
-}
-.footer{
-  background-color: #4B56D2;
-  height: 200px;
-  width: 100%;
 }
 .links{
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
   position: relative;
+  display: inline;
   left: 20px;
 }
 .autocar,.car-bike{
   font-weight: lighter;
-  color: aliceblue;
+  color:rgb(205, 199, 199);
+}
+.autocar{
   position: relative;
-  left: 20px;
+  top: 30px;
+  right: 55px;
+
+}
+.car-bike{
+  position: relative;
+  bottom: -25px;
+  left: 40px;
 }
 .car-bike:hover{
   display: inline-block;
-  background-color: #abbbf9;
+  background-color:black;
 }
 .autocar:hover{
   display: inline-block;
-  background-color: #abbbf9;
+  background-color:black;
 }
 .use{
   margin: 0;
-  color: gainsboro;
-  font-size: 30px;
+  display: inline;
+  font-family: 'Kalam', cursive;
+  color: rgb(0, 0, 0);
+  position: relative;
+  left: 30px;
+  font-size: 20px;
   padding-top: 10px;
+}
+.insta-logo,.git-logo{
+  height: 30px;
+  width: 30px;
+}
+.contact{
+  text-align: center;
+  
+}
+.heading{
+  display: inline;
+  text-align: center;
+  position: relative;
+  bottom: 70px;
+}
+.insta,.github{
+  position: relative;
+  bottom: 30px;
+  right: 90px;
+}
+.footer{
+  background-color: #7286D3;
+  margin: 0;
+  width: auto;
+  height: auto;
+  position: relative;
+  bottom: -150px;
+  overflow: hidden;
+  backdrop-filter: blur(10px);
+  font-family: 'Kalam', cursive;
+  font-size: 20px;
+}
+.logo{
+  display: inline;
+  width: 100px;
+  position: relative;
+  right: 190px;
+  bottom: 20px;
+  margin: 0;
 }
